fixing vision text (lost left alignment)

--- a/css/pha_theme_live.layout5e.css
+++ b/css/pha_theme_live.layout5e.css
@@ -323,3 +323,19 @@ div#boxes-box-1460653819 {display: none}
 @media (min-width: 1150px){
     .flexslider-text-overlay-inner span {font-size: 20px !important;}
 }
+
+@media (min-width: 769px) and (max-width: 1008px){
+.front .flexslider-text-overlay {
+        position: absolute;
+        display: block;
+        top: 200px !important;
+        left: 280px !important;
+        width: 70vw !important;
+        z-index: 10;
+        height: calc(100vh - 150px);
+        color: #fff !important;
+        background: rgba(0, 0, 0, 0) !important;
+        margin-left: -280px;
+    }
+    
+}
